--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,287 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&family=Raleway:ital@0;1&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Quicksand", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+    background-color: #0f001a;
+    font-family: Arial, Helvetica, sans-serif; 
+    color: #f7f7f7; 
+}
+
+h1, h2,h4, h5, h6, p, a, input, textarea, ul, li {
+    margin: 0;
+    padding: 0;
+    color: inherit; 
+}
+
+input[type="text"] {
+    color: black; /* Color del texto en inputs */
+}
+
+ul {
+    list-style-type: none;
+}
+
+h1 {
+    font-size: 2em;
+    margin-bottom: 10px; 
+    text-align: center;
+}
+li {
+  text-align: center;
+
+}
+h2 {
+    text-align: center;
+}
+
+.producto-agregar {
+    margin: 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 5px;
+    background-color: rgb(39, 3, 37);
+    color: aliceblue;
+}
+
+/* Estilo para la sinopsis */
+.product-synopsis {
+    font-size: 0.9em;
+    line-height: 1.4; 
+}
+
+a {
+    text-decoration: none;
+    margin-left: 30px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+    background-color: #0f001a;
+}
+
+
+/* Estilos de Header */
+header {
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    padding: 20px;
+}
+
+.header-content {
+    display: flex;
+    align-items: center; 
+    margin-bottom: 15px; 
+}
+
+.store-title {
+    margin: 0;
+    font-size: 4em;
+    color: aliceblue;
+    text-decoration: underline;
+    font-weight: lighter;
+}
+
+/* Estilos Navbar */
+.navbar {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+  padding: 20px;
+}
+.cart-container {
+    margin-left: auto; 
+}
+
+.cart-text {
+    color: white; 
+    font-size: 1.2em; 
+}
+nav {
+    padding: 0;
+    margin: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* Estilos para la barra de búsqueda */
+.search-bar {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0; 
+    text-align: center;
+}
+
+.search-bar input {
+    padding: 10px;
+    font-size: 1em;
+    border: 1px solid #ccc;
+    border-radius: 5px 0 0 5px; 
+    color: #000000;
+    text-align: center;
+}
+
+.search-bar button {
+    padding: 10px;
+    font-size: 1em;
+    border: 1px solid #ccc;
+    border-radius: 0 5px 5px 0; 
+    background-color: #0f001a; 
+    color: white;
+}
+
+.search-bar button:hover {
+    background-color: #555; 
+}
+
+.search-bar text {
+  color: black;
+}
+
+/* Estilos Generales para Botones */
+button {
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 10px;
+    background-color: #0f001a;
+    color: #ddd;
+    margin-top: 10px;
+}
+
+button.boton-menu {
+    background-color: black;
+    color: aliceblue;
+}
+
+button:hover {
+    background-color: white;
+    color: black;
+    font-weight: bolder;
+}
+
+/* Estilos para cada producto */
+.producto {
+  text-align: center;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 20px;
+
+}
+
+/* Estilos para las imágenes de productos */
+.producto img {
+  border: 1px solid #ccc;
+  width: 200px;
+  height: 300px; 
+  object-fit: cover; 
+  box-shadow: 0 0 10px gray;
+  border-radius: 7%;
+}
+
+
+/* Estilos para el título y la sinopsis */
+.producto h2 {
+  font-size: 1.2em;
+  margin: 10px 0;
+}
+
+.product-synopsis {
+  font-size: 0.9em;
+  line-height: 1.4;
+}
+
+/* Ajustes para la responsividad */
+@media (max-width: 768px) {
+  .contenedor-productos {
+      grid-template-columns: repeat(2, 1fr); 
+  }
+}
+
+@media (max-width: 480px) {
+  .contenedor-productos {
+      grid-template-columns: 1fr; 
+  }
+}
+
+span {
+    color: #ccc;
+    font-family: Arial, Helvetica, sans-serif; 
+
+
+}
+
+/* Estilos del Carrito */
+.cart-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 20px; 
+    margin-top: 20px;
+}
+
+.cart-item {
+    background-color: #222; 
+    color: white;
+    border-radius: 5px; 
+    padding: 10px;
+    text-align: center; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
+}
+
+.cart-item img {
+    max-width: 50%; 
+    border-radius: 5px; 
+}
+
+.cart-item-info {
+    margin-top: 10px; 
+    margin-left: 10px;
+}
+
+.cart-item-image {
+  width: 100px; 
+  height: 100px;
+  object-fit: cover; 
+  margin-right: 10px; 
+}
+
+.cart-text {
+  text-align: center;
+}
+
+
+footer {
+    border-radius: 5px;
+    cursor: pointer;
+    padding: 10px;
+    color: #ddd;
+    margin-top: 20px;
+    text-align: center;
+}
+
+@media (max-width: 1200px) {
+  .contenedor-productos {
+      grid-template-columns: repeat(3, 1fr);  
+  }
+}
+
+@media (max-width: 800px) {
+  .contenedor-productos {
+      grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 500px) {
+  .contenedor-productos {
+      grid-template-columns: 1fr; 
+  }
 }
